--- a/geo-graphics/assets/css/main7.css
+++ b/geo-graphics/assets/css/main7.css
@@ -1,8 +1,13 @@
+body {
+height: 100vh;
+ background-color: black;
+
+}
 .gradient {
   border-radius: 50%;
   color:#fff;
-  width: 700px;
-  height:700px;
+  width: 100vh;
+  height:100vh;
   background-image: linear-gradient(#3c9535, #0c2bc7);
 
 }
@@ -22,7 +27,7 @@
 }
 
 img {
-
+width: 100vh;
 display:flex;
   align-items:center;
   justify-content:center;
@@ -42,8 +47,8 @@ display:flex;
 
 
 .grid {
-  width:100%;
-  height:100vh;
+  width:50vh;
+  height:50vh;
   display:flex;
   align-items:center;
   justify-content:center;
