--- a/Future-Signals/assets/css/main.css
+++ b/Future-Signals/assets/css/main.css
@@ -1,50 +1,58 @@
 body {
 	font-family: Helvetica,Arial,sans-serif;
 	font-size: 32px;
+
 }
 
 a {
 
 	display: inline-block;
-	padding: 5px;
-	background-color: blue;
-	border-radius: 5px;
-	color: black;
+	padding: 1vw;
+	color: white;
 	text-decoration: none;
+	border: 0px;
 }
 
 .nav {
 
-	width: 100%;
-	background-color: black;
-	padding: 5px;
+	font-weight: bold;
+	color: white;
+	width: 55%;
+	background-color: red;
+	padding: 10px;
 	position: fixed;
 	bottom: 0px;
-	left: 0px;
+	right: 0px;
+	font-size: 1.7vw;
+}
+
+.nav-item:hover {
+
+	color: #ffee00;
 
 }
 
 .nav-item {
 
+	font-weight: bold;
 	display: inline-block;
 	padding: 5px;
-	background-color: blue;
-	border-radius: 5px;
-	color: black;
-	text-decoration: none;
+	width: 13%;
 }
 
 .nav-header {
 
+	font-weight: bold;
 	display: inline-block;
-	padding: 5px;
-	color: grey;
+	padding: 20px;
+	color: #ffee00;
+	width: 8vw;
 
 }
 
 .title {
 
-	width: 100%;
+	width: 25%;
 
 }
 
@@ -96,8 +104,7 @@ a {
 }
 
 .figure span {
-	padding-left: 20px;
-	font-size: 12px;
+	
 
 }
 
@@ -110,7 +117,7 @@ a {
 
 .research-item {
 
-	flex: 0 0 33.333%;
+	flex: 0 0 12.5%;
 	padding: 10px;
 
 }
@@ -123,7 +130,7 @@ a {
 
 .research-item span {
 
- 	color: grey;
+ 	display: none;
 
 }
 
@@ -148,3 +155,22 @@ a {
 
 }
 
+.card {
+
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 80px;
+}
+
+.card-item {
+
+	flex: 0 0 12.5%;
+	padding: 10px;
+
+}
+
+.card-item img {
+
+	width: 100%;
+	
+}
