--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ a {
 .nav {
 
 	color: white;
-	width: 40%;
+	width: 60%;
 	background-color: red;
 	padding: 1vw;
 	position: fixed;
@@ -34,7 +34,9 @@ a:hover {
 	font-weight: bold;
 	display: inline-block;
 	padding: 1vw;
-	width: 10.5vw;
+	width: 16vw;
+	align-content: center;
+	text-align: center;
 }
 
 .title-letter:hover {
